# codexo

./: .gitignore  LICENSE  MANIFEST.in  README.md  codexo.config.example  pyproject.toml  requirements.txt  setup.py
codexo/: __init__.py  analyzer.py  config.py  main.py  report.py
