[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "codexo"
version = "0.1.0"
description = "A code complexity analyzer to keep your codebase maintainable and LLM-friendly"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Imran Nathani", email = "imran.nathani@gmail.com"}
]
keywords = ["code-analysis", "complexity", "refactoring", "developer-tools", "code-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "radon>=6.0.0",
    "pathspec>=0.11.0",
    "toml>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/imran-nathani/codexo"
"Bug Reports" = "https://github.com/imran-nathani/codexo/issues"
"Source" = "https://github.com/imran-nathani/codexo"

[project.scripts]
codexo = "codexo.main:cli"
